--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="add opp">+</div>
                 <div class="sub opp">-</div>
                 <div class="multiply opp">*</div>
-                <div class="divide opp">÷</div>
+                <div class="divide opp">/</div>
             </div>
             <div class="bottom-section">
                 <div class="bottom-left">
